--- a/style.css
+++ b/style.css
@@ -41,6 +41,12 @@ a:hover {
   font-weight: bold;
 }
 
+.title {
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 0.9rem;
+}
+
 .dot {
   height: 12px;
   width: 12px;
@@ -51,11 +57,6 @@ a:hover {
 .yellow { background: #ffbd2e; }
 .green { background: #27c93f; }
 
-.title {
-  margin-left: auto;
-  margin-right: 1rem;
-  font-size: 0.9rem;
-}
 
 .tabs {
   display: flex;
