--- a/style.css
+++ b/style.css
@@ -30,21 +30,31 @@ a:hover {
   margin-top: 10px;
 }
 
-
 .terminal-bar {
   background: #2b2b2b;
   padding: 0.5rem;
   display: flex;
   align-items: center;
-  gap: 10px;
-  color: white;
-  font-weight: bold;
+  position: relative;
 }
 
-.title {
-  margin-left: auto;
-  margin-right: auto;
+.terminal-bar-left {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.terminal-bar-center {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  font-weight: bold;
   font-size: 0.9rem;
+  color: white;
+}
+
+.terminal-bar-right {
+  margin-left: auto;
 }
 
 .dot {
@@ -56,7 +66,6 @@ a:hover {
 .red { background: #ff5f56; }
 .yellow { background: #ffbd2e; }
 .green { background: #27c93f; }
-
 
 .tabs {
   display: flex;
