--- a/style.css
+++ b/style.css
@@ -23,6 +23,15 @@ a:hover {
   overflow: hidden;
 }
 
+.terminal-window {
+  position: absolute; 
+  top: 100px;
+  left: 100px;
+  z-index: 999;
+}
+
+
+
 .ascii-art {
   font-family: monospace;
   color: #00ff00;
